usecontext, lifting stateup, class components, react-router-dom, useState, useEffect, react life cycle, higher order components

--- a/index.css
+++ b/index.css
@@ -1,34 +1,62 @@
-.heading{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
+.heading {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
 }
-.main-logo{
-    width: 100px;
+.main-logo {
+  width: 100px;
 }
 .nav-items {
-    list-style-type: none;
-    display: flex;
+  list-style-type: none;
+  display: flex;
 }
 .nav-items li {
-    margin-right: 20px;
-    font-weight: bold;
-    cursor: pointer;
+  margin-right: 20px;
+  font-weight: bold;
+  cursor: pointer;
 }
-.main-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 30px;
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 30px;
 }
 .main-container .card {
-    width: 150px;
-    border: 0 solid black;
-    box-shadow: 10px 10px 10px rgba(0,0,0,0.15);
-    padding: 0 10px;
+  width: 150px;
+  border: 0 solid black;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+  padding: 0 10px;
+  cursor: pointer;
+}
+.main-container p {
+  text-decoration: none;
+  color: black;
 }
 .main-container .card img {
-    width: 100%;
-    height: 100px;
-    object-fit: fit;
-    border-radius: 10px;
+  width: 100%;
+  height: 100px;
+  object-fit: fit;
+  border-radius: 10px;
+}
+.card p:last-child {
+  word-break: break-all;
+  letter-spacing: 1px;
+}
+.container {
+  text-align: center;
+}
+.filter {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.detail-container img {
+  width: 150px;
+}
+.accordion-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 600px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
